--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,20 @@
   padding: 2rem;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  border-bottom: 1px solid black;
+  margin-bottom: 30px;
+}
+
+.small {
+  font-size: 0.4em;
+}
+.icon {
+  padding-right: 20px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
