--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -4,21 +4,34 @@
   display: flex;
   flex-direction: column;
   align-items: self-start;
-  padding: 25px;
-  background-color: var(--color-white);
-  border-radius: 10px;
+  padding: 10px 25px;
+  margin-top: 40px;
+  background-color: #ffffff90;
+  border-radius: 2px;
 }
 
-input {
-  margin-bottom: 20px;
+.input-name {
+  margin-bottom: 30px;
+  margin-top: 10px;
+  padding: 10px 5px;
+  border: none;
+  border-bottom: 1px solid black;
+  width: 100%;
+  background: none;
 }
 
 .checkbox-div {
   display: flex;
+  margin-bottom: 30px;
+  margin-top: 10px;
 }
 
 .submit-button {
   border-radius: 100px;
   padding: 8px 25px;
-  border: 2px solid black;
+  border: 1px solid black;
+  width: 100%;
+  align-self: center;
+  margin-bottom: 10px;
+  background: none;
 }
