--- a/src/Components/List/List.css
+++ b/src/Components/List/List.css
@@ -1,19 +1,22 @@
 li {
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
   align-items: center;
   gap: 30px;
-  background-color: var(--color-white);
-  border-radius: 10px;
+  background-color: #ffffff90;
+  border-radius: 2px;
   margin-bottom: 15px;
+  padding: 5px 25px;
 }
 
 ul {
+  margin-top: 30px;
   padding: 0px;
 }
 
 .delete-button {
   border: none;
+  align-self: flex-end;
+  background: none;
 }
