--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: "Almarai", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  line-height: 1.2;
   --color-white: #fff;
 
   /*   color-scheme: light dark;
@@ -17,29 +19,42 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  background: #70e1f5;
-  background: -webkit-linear-gradient(to bottom, #84ccec, #ffd194);
-  background: linear-gradient(to bottom, #84ccec, #ffd194);
+  min-width: 400px;
+
+  background: linear-gradient(
+    45deg,
+    rgba(255, 232, 130, 1) 0%,
+    rgba(139, 216, 255, 1) 100%
+  );
 }
 
 .background-goodWeather {
-  background: #70e1f5; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to bottom,
-    #84ccec,
-    #ffd194
-  ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
-    to bottom,
-    #84ccec,
-    #ffd194
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    45deg,
+    rgba(255, 232, 130, 1) 0%,
+    rgba(139, 216, 255, 1) 100%
+  );
+}
+.background-badWeather {
+  background: linear-gradient(
+    43deg,
+    rgba(216, 225, 228, 1) 0%,
+    rgba(110, 150, 171, 1) 100%
+  );
+}
+h1 {
+  font-family: "Almarai", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4em;
+  line-height: 1.1;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h2,
+h3,
+h4,
+h4 {
+  font-weight: 400;
 }
 
 button {
