--- a/src/Components/List/List.css
+++ b/src/Components/List/List.css
@@ -10,6 +10,10 @@ li {
   padding: 5px 25px;
 }
 
+li:hover {
+  background-color: #ffffff;
+}
+
 ul {
   margin-top: 30px;
   padding: 0px;
@@ -19,4 +23,9 @@ ul {
   border: none;
   align-self: flex-end;
   background: none;
+  border-radius: 100px;
+}
+
+.delete-button:hover {
+  border: 1px solid black;
 }
