--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,15 @@
   margin-bottom: 30px;
 }
 
+select {
+  background: none;
+  border: none;
+}
+
+label {
+  padding-right: 15px;
+}
+
 .small {
   font-size: 0.4em;
 }
@@ -18,8 +27,13 @@
   padding-right: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (min-width: 1020px) {
+  .header {
+    width: 800px;
+  }
+
+  main {
+    display: flex;
+    justify-content: space-between;
   }
 }
