--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 400px;
-
+  margin-bottom: 50px;
   background: linear-gradient(
     45deg,
     rgba(255, 232, 130, 1) 0%,
